force-app/main/default/objects/Beneficiary_Card__c/Beneficiary_Card__c.object-meta.xml
<CustomObject>
    <label>Beneficiary Card</label>
    <nameField>
        <label>Beneficiary Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiary Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>