force-app/main/default/objects/Beneficiary_Card__c/fields/Breach__c.field-meta.xml
<CustomField>
    <fullName>Breach__c</fullName>
    <label>Breach</label>
    <length>100</length>
    <type>Text</type>
</CustomField>