force-app/main/default/objects/Beneficiary_Card__c/fields/Card_Reference__c.field-meta.xml
<CustomField>
    <fullName>Card_Reference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Card Reference</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>