force-app/main/default/objects/Beneficiary_Card__c/fields/Fraud_Block_Type__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Block_Type__c</fullName>
    <label>Fraud Block Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>