force-app/main/default/objects/Beneficiary_Card__c/fields/Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits__c</fullName>
    <label>Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>