force-app/main/default/objects/Beneficiary_Card__c/fields/Last_Balance_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Balance_Update__c</fullName>
    <label>Last Balance Update</label>
    <type>DateTime</type>
</CustomField>