force-app/main/default/objects/Beneficiary_Card__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>