force-app/main/default/objects/Beneficiary_Card__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Beneficiary Cards</relationshipLabel>
    <relationshipName>Beneficiary_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>