force-app/main/default/objects/Beneficiary_Card__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>